# python-zwoasi

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
misc/: 99-asi.rules
zwoasi/: __init__.py
zwoasi/examples/: binning_demo.py  zwoasi_demo.py
