[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zwoasi"
authors = [
        {name = "Steve Marple", email = "s.marple@lancaster.ac.uk"},
]
description = "Python binding for the ZWO ASI v2 library."
keywords = ["zwo", "astronomy", "camera", "driver"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
readme = "README.rst"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = ["numpy>=1.7"]

[project.urls]
Homepage = "https://github.com/python-zwoasi/python-zwoasi"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "zwoasi.__version__"}
